another big update

--- a/assets/html/index.html
+++ b/assets/html/index.html
@@ -45,10 +45,12 @@
 </script>
     </head>
     <body>
+<script src="/assets/js/particlecode.js"></script>
+<script src="/assets/js/particles.js"></script>
 <script src="/assets/js/global.js"></script>
 <script src="/assets/js/eruda.js"></script>
 <script>eruda.init();</script>
-        <div id="particles-js"></div>
+<div id="particles-js"></div>
         <nav>
             <a href="/assets/html/index.html" class="left-link">Starlight</a>
             <div class="nav-links">
