--- a/assets/html/utilities.html
+++ b/assets/html/utilities.html
@@ -45,9 +45,11 @@
 </script>
     </head>
     <body>
-        <script src="/general/js/eruda.js"></script>
+        <script src="/assets/js/particlecode.js"></script>
+        <script src="/assets/js/particles.js"></script>
+        <script src="/assets/js/global.js"></script>
+        <script src="/assets/js/eruda.js"></script>
         <script>eruda.init();</script>
-        <script src="/general/js/global.js"></script>
         <div id="particles-js"></div>
         <nav>
             <a href="/assets/html/index.html" class="left-link">Starlight</a>
@@ -86,80 +88,78 @@
               <br>
               <div class="row">
                 <div class="column" data-category="Social">
-                    <a href="/misc/apps/youtube.html"><img src="/img/images/thumbnails/youtube.jpeg">
+                    <a href="/assets/misc/apps/youtube.html"><img src="/assets/images/thumbnails/youtube.jpeg">
                     <div class="description">
-                        <h2>Youtube</h2>
-                        <p>videos stuff</p> <!-- Shortened description --></a>
+                        <h2>Youtube</h2></a>
                     </div>
                 </div>
                 <div class="column" data-category="Other">
-                    <a href="/misc/apps/lagged.html"><img src="/img/images/thumbnails/lagged.avif ">
+                    <a href="/assets/misc/apps/lagged.html"><img src="/assets/images/thumbnails/lagged.avif ">
                     <div class="description">
                         <h2>Lagged.com</h2>
-                        <p>GAMING WEBSITE</p> <!-- Shortened description --></a>
+                      </a>
                     </div>
                 </div>
                 <div class="column" data-category="Proxy">
-                    <a href="/misc/apps/equinox.html"><img src="/img/images/thumbnails/wrnd.png ">
+                    <a href="/assets/misc/apps/equinox.html"><img src="/assets/images/thumbnails/wrnd.png ">
                     <div class="description">
                         <h2>Equinox</h2>
-                        <p>Very fast proxy site</p> <!-- Shortened description --></a>
+                    </a>
                     </div>
                 </div>
                 <div class="column" data-category="Tools">
-                    <a href="/misc/apps/calculator.html"><img src="/img/images/thumbnails/calculator.png">
+                    <a href="/assets/misc/apps/calculator.html"><img src="/assets/images/thumbnails/calculator.png">
                     <div class="description">
                         <h2>Calculator</h2>
-                        <p>Simple Calculator using JS</p> <!-- Shortened description --></a>
+                    
                     </div>
                 </div>
                 <div class="column" data-category="Tools">
-                    <a href="/misc/apps/htmlcoder.html"><img src="/img/images/thumbnails/htmlcoder.png">
+                    <a href="/assets/misc/apps/htmlcoder.html"><img src="/assets/images/thumbnails/htmlcoder.png">
                     <div class="description">
                         <h2>HTML Coder</h2>
-                        <p>for super duper cool web devs</p> <!-- Shortened description --></a>
+                        </a>
                     </div>
                 </div>
                 <div class="column" data-category="Tools">
-                    <a href="/misc/apps/html-coder-v2.html"><img src="/img/images/thumbnails/htmlcoder.png">
+                    <a href="/assets/misc/apps/html-coder-v2.html"><img src="/assets/images/thumbnails/htmlcoder.png">
                     <div class="description">
                         <h2>HTML Coder V2</h2>
-                        <p>Multiple language code editor</p> <!-- Shortened description --></a>
+                     </a>
                     </div>
                 </div>
                 <div class="column" data-category="Tools">
-                    <a href="/misc/apps/calender.html"><img src="/img/images/thumbnails/calender.png ">
+                    <a href="/assets/misc/apps/calender.html"><img src="/assets/images/thumbnails/calender.png ">
                     <div class="description">
                         <h2>Calender</h2>
-                        <p>Set notifications for dates and stuff idk</p> <!-- Shortened description --></a>
+                       </a>
                     </div>
                 </div>
                 <div class="column" data-category="Tools">
-                    <a href="/misc/apps/drawingpad.html"><img src="/img/images/thumbnails/drawingpad.png">
+                    <a href="/assets/misc/apps/drawingpad.html"><img src="/assets/images/thumbnails/drawingpad.png">
                     <div class="description">
-                        <h2>Drawing Pad</h2>
-                        <p>Draw anything</p> <!-- Shortened description --></a>
+                        <h2>Drawing Pad</h2></a>
                     </div>
                 </div>
                 <div class="column" data-category="Tools">
-                    <a href="/misc/apps/passwordgenerator.html"><img src="/img/images/thumbnails/passwordgenerator.png ">
+                    <a href="/assets/misc/apps/passwordgenerator.html"><img src="/assets/images/thumbnails/passwordgenerator.png ">
                     <div class="description">
                         <h2>Password Generator</h2>
-                        <p>generate cool passwords and usernames</p> <!-- Shortened description --></a>
+               </a>
                     </div>
                 </div>
                 <div class="column" data-category="Tools">
-                    <a href="/misc/apps/texttospeech.html"><img src="/img/images/thumbnails/texttospeech.png">
+                    <a href="/assets/misc/apps/texttospeech.html"><img src="/assets/images/thumbnails/texttospeech.png">
                     <div class="description">
                         <h2>Text to speech</h2>
-                        <p>yes you can make it say the n word</p> <!-- Shortened description --></a>
+                     </a>
                     </div>
                 </div>
                 <div class="column" data-category="Tools">
-                    <a href="/misc/apps/todolist.html"><img src="/img/images/thumbnails/todolist.png">
+                    <a href="/assets/misc/apps/todolist.html"><img src="/assets/images/thumbnails/todolist.png">
                     <div class="description">
                         <h2>To do list</h2>
-                        <p>To do ur lists</p> <!-- Shortened description --></a>
+                        </a>
                     </div>
                 </div>
                 <div style="display: none;">
@@ -260,74 +260,6 @@
             </div>
     </body>
 </html><script src="/general/js/cloak.js"></script>
-    <!-- Include Particle.js library -->
-    <script src="https://cdn.jsdelivr.net/particles.js/2.0.0/particles.min.js"></script>
-    <script>
-        particlesJS("particles-js", {
-            particles: {
-                number: {
-                    value: 200, // Number of particles
-                    density: {
-                        enable: true,
-                        value_area: 800
-                    }
-                },
-                color: {
-                    value: "#ffffff" // White particles to represent stars
-                },
-                shape: {
-                    type: "circle", // Circular particles
-                    stroke: {
-                        width: 0,
-                        color: "#000000"
-                    },
-                },
-                opacity: {
-                    value: 0.7, // Base opacity for brightness
-                    random: true, // Random opacity for blinking effect
-                    anim: {
-                        enable: false,
-                    }
-                },
-                size: {
-                    value: 3, // Size of particles
-                    random: true,
-                    anim: {
-                        enable: false,
-                    }
-                },
-                line_linked: {
-                    enable: false, // Disable connecting lines
-                },
-                move: {
-                    enable: true,
-                    speed: 5, // Slower speed for a more realistic flying effect
-                    direction: "none", // Particle movement direction
-                    random: true, // Random movement for a more dynamic effect
-                    straight: false,
-                    out_mode: "out",
-                    bounce: false,
-                    attract: {
-                        enable: false,
-                    }
-                }
-            },
-            interactivity: {
-                detect_on: "canvas",
-                events: {
-                    onhover: {
-                        enable: false, // Disable hover effect
-                    },
-                    onclick: {
-                        enable: false, // Disable click effect
-                    },
-                    resize: true
-                }
-            },
-            retina_detect: true
-        });
-    </script>
- 
      <script>
         let deferredPrompt;
         window.addEventListener('beforeinstallprompt', (e) => {
