--- a/assets/misc/apps/lagged.html
+++ b/assets/misc/apps/lagged.html
@@ -166,9 +166,11 @@
 </style>
     </head>
     <body>
-        <script src="/general/js/eruda.js"></script>
+        <script src="/assets/js/particlecode.js"></script>
+        <script src="/assets/js/particles.js"></script>
+        <script src="/assets/js/global.js"></script>
+        <script src="/assets/js/eruda.js"></script>
         <script>eruda.init();</script>
-        <script src="/general/js/global.js"></script>
         <div id="particles-js"></div>
         <nav>
             <a href="/assets/html/index.html" class="left-link">Starlight</a>
@@ -193,15 +195,15 @@
 
     <div class="controls">
    &nbsp;&nbsp;
-   <a onclick="toggleFullscreen()"><img src="/img/fullscreen.png" height="30" width="30" class="icon"> </a>
-   <a onclick="refreshIframe()"><img src="/img/reload.png" height="30" width="30" class="icon"> </a>
+   <a onclick="toggleFullscreen()"><img src="/assets/images/other/fullscreen.png" height="30" width="30" class="icon"> </a>
+   <a onclick="refreshIframe()"><img src="/assets/images/other/reload.png" height="30" width="30" class="icon"> </a>
    <div class="share-container">
-   <a id="share-button"><img src="/img/sharee.png" height="30" width="30" class="icon"> </a>
+   <a id="share-button"><img src="/assets/images/other/sharee.png" height="30" width="30" class="icon"> </a>
      <div class="notification" id="notification">
         <span id="link-text"></span>
         <button class="copy-button" id="copy-button">Copy</button>
     </div>
-    <a href="https://lagged.com" target="_blank"><img src="/img/opendirect.png" height="30" width="30" class="icon"></a>
+    <a href="https://lagged.com" target="_blank"><img src="/assets/images/other/opendirect.png" height="30" width="30" class="icon"></a>
 </div>
 </div>
 
@@ -231,73 +233,7 @@
 </div>
     </body>
 </html><script src="/general/js/cloak.js"></script>
-    <!-- Include Particle.js library -->
-    <script src="https://cdn.jsdelivr.net/particles.js/2.0.0/particles.min.js"></script>
-    <script>
-        particlesJS("particles-js", {
-            particles: {
-                number: {
-                    value: 200, // Number of particles
-                    density: {
-                        enable: true,
-                        value_area: 800
-                    }
-                },
-                color: {
-                    value: "#ffffff" // White particles to represent stars
-                },
-                shape: {
-                    type: "circle", // Circular particles
-                    stroke: {
-                        width: 0,
-                        color: "#000000"
-                    },
-                },
-                opacity: {
-                    value: 0.7, // Base opacity for brightness
-                    random: true, // Random opacity for blinking effect
-                    anim: {
-                        enable: false,
-                    }
-                },
-                size: {
-                    value: 3, // Size of particles
-                    random: true,
-                    anim: {
-                        enable: false,
-                    }
-                },
-                line_linked: {
-                    enable: false, // Disable connecting lines
-                },
-                move: {
-                    enable: true,
-                    speed: 5, // Slower speed for a more realistic flying effect
-                    direction: "none", // Particle movement direction
-                    random: true, // Random movement for a more dynamic effect
-                    straight: false,
-                    out_mode: "out",
-                    bounce: false,
-                    attract: {
-                        enable: false,
-                    }
-                }
-            },
-            interactivity: {
-                detect_on: "canvas",
-                events: {
-                    onhover: {
-                        enable: false, // Disable hover effect
-                    },
-                    onclick: {
-                        enable: false, // Disable click effect
-                    },
-                    resize: true
-                }
-            },
-            retina_detect: true
-        });
-    </script>
+  
      <script>
         let deferredPrompt;
         window.addEventListener('beforeinstallprompt', (e) => {
@@ -307,6 +243,6 @@
         });
         
         </script>
-        <script src="/general/js/ai.js"></script>
-        <script src="/general/js/settings.js"></script>
-        <script src="/general/js/game.js"></script>
+      <script src="/assets/js/ai.js"></script>
+      <script src="/assets/js/settings.js"></script>
+      <script src="/assets/js/game.js"></script>
