--- a/assets/uv/embed.html
+++ b/assets/uv/embed.html
@@ -1,7 +1,45 @@
-<script src="embed.js"></script>
-<script src="/static/uv/uv.bundle.js" defer></script>
-<script src="/static/uv/uv.config.js" defer></script>
-<script src="/static/register-sw.js" defer></script>
-<script src="/static/search.js" defer></script>
-<script src="/static/index.js" defer></script>
-<script src="/static/error.js" defer></script>
+
+<!DOCTYPE html>
+<html lang="en">
+
+<head>
+    <meta http-equiv="Content-Security-Policy"
+        content="script-src 'self' 'unsafe-eval' https://www.gstatic.com/ https://apis.google.com/ https://www.authpro.com https://www.googletagmanager.com https://maxcdn.bootstrapcdn.com https://cdnjs.cloudflare.com https://static.cloudflareinsights.com https://cdn.jsdelivr.net https://widgetbot.io https://docs.widgetbot.io 'unsafe-inline';">
+    <style>
+        body {
+            text-align: center;
+        }
+
+        header {
+            text-align: center;
+        }
+
+        .rainbowtitle {
+            display: inline-block;
+        }
+
+        h1 {
+            color: #fff;
+        }
+    </style>
+</head>
+<body>
+    <div id="roddyrichhesbox">
+        <div id="main">
+            <br>
+            <br>
+            <br>
+            <h1>deploying proxy...</h1>
+            <br>
+            <div class="lds-roller"><div></div><div></div><div></div><div></div><div></div><div></div><div></div><div></div></div>
+        </div>
+    </div>
+    <div id="background"></div>
+    <div id="particles-js"></div>
+    <script src="/assets/uv/uv/uv.bundle.js"></script>
+    <script src="/assets/uv/uv/uv.config.js"></script>
+    <script src="/assets/uv/register-sw.js"></script>
+    <script src="/assets/uv/embed.js"></script>
+</body>
+
+</html>
