--- a/assets/html/arcade.html
+++ b/assets/html/arcade.html
@@ -45,9 +45,11 @@
 </script>
     </head>
     <body>
-        <script src="/general/js/eruda.js"></script>
+        <script src="/assets/js/particlecode.js"></script>
+        <script src="/assets/js/particles.js"></script>
+        <script src="/assets/js/global.js"></script>
+        <script src="/assets/js/eruda.js"></script>
         <script>eruda.init();</script>
-        <script src="/general/js/global.js"></script>
         <div id="particles-js"></div>
         <nav>
             <a href="/assets/html/index.html" class="left-link">Starlight</a>
@@ -99,59 +101,59 @@
               <br>
               <div class="row">
                 <div class="column" data-category="Puzzle">
-                    <a href="/misc/games/1.html"><img src="/img/images/thumbnails/1.png ">
+                    <a href="/assets/misc/games/1.html"><img src="/assets/images/thumbnails/1.png ">
                     <div class="description">
                         <h2>1</h2>
-                        <p>Simple puzzle game</p> <!-- Shortened description --></a>
+                       </a>
                     </div>
                 </div>
                 <div class="column" data-category="Shooter">
-                    <a href="/misc/games/1v1lol.html"><img src="/img/images/thumbnails/1v1.jpeg">
+                    <a href="/assets/misc/games/1v1lol.html"><img src="/assets/images/thumbnails/1v1.jpeg">
                     <div class="description">
                         <h2>1v1.lol</h2>
-                        <p>Simple Battle royale game</p> <!-- Shortened description --></a>
+                       </a>
                     </div>
                 </div>
                 <div class="column" data-category="Arcade">
-                    <a href="/misc/games/1v1space.html"><img src="/img/images/thumbnails/1v1space.png">
+                    <a href="/assets/misc/games/1v1space.html"><img src="/assets/images/thumbnails/1v1space.png">
                     <div class="description">
                         <h2>1v1.space</h2>
-                        <p>Space game</p> <!-- Shortened description --></a>
+                     </a>
                     </div>
                 </div>
                 <div class="column" data-category="Simulation">
-                    <a href="/misc/games/8ball.html"><img src="/img/images/thumbnails/8ball.jpeg">
+                    <a href="/assets/misc/games/8ball.html"><img src="/assets/images/thumbnails/8ball.jpeg">
                     <div class="description">
                         <h2>8ball Billards Class</h2>
-                        <p>Simple pool game</p> <!-- Shortened description --></a>
+                     </a>
                     </div>
                 </div>
                 <div class="column" data-category="Arcade">
-                    <a href="/misc/games/10-minutes-till-dawn.html"><img src="/img/images/thumbnails/10minutestilldawn.jpeg">
+                    <a href="/assets/misc/games/10-minutes-till-dawn.html"><img src="/assets/images/thumbnails/10minutestilldawn.jpeg">
                     <div class="description">
                         <h2>10 Minutes Till Dawn</h2>
-                        <p>Survive 10 minutes from something idk</p> <!-- Shortened description --></a>
+                    </a>
                     </div>
                 </div>
                 <div class="column" data-category="2D">
-                    <a href="/misc/games/100ng.html"><img src="/img/images/thumbnails/100ng.png ">
+                    <a href="/assets/misc/games/100ng.html"><img src="/assets/images/thumbnails/100ng.png ">
                     <div class="description">
                         <h2>100ng</h2>
-                        <p>very old game</p> <!-- Shortened description --></a>
+                       </a>
                     </div>
                 </div>
                 <div class="column" data-category="Platformer">
-                    <a href="/misc/games/2020-game.html"><img src="/img/images/thumbnails/2020.png">
+                    <a href="/assets/misc/games/2020-game.html"><img src="/assets/images/thumbnails/2020.png">
                     <div class="description">
                         <h2>2020 game</h2>
-                        <p>a game that takes place in 2020</p> <!-- Shortened description --></a>
+                     </a>
                     </div>
                 </div>
                 <div class="column" data-category="Puzzle">
-                    <a href="/misc/games/2048.html"><img src="/img/images/thumbnails/2048.png">
+                    <a href="/assets/misc/games/2048.html"><img src="/assets/images/thumbnails/2048.png">
                     <div class="description">
                         <h2>2048</h2>
-                        <p>Puzzle game</p> <!-- Shortened description --></a>
+    </a>
                     </div>
                 </div>
 <div style="display: none;">
@@ -2960,74 +2962,7 @@
             </div>
     </body>
 </html><script src="/general/js/cloak.js"></script>
-    <!-- Include Particle.js library -->
-    <script src="https://cdn.jsdelivr.net/particles.js/2.0.0/particles.min.js"></script>
-    <script>
-        particlesJS("particles-js", {
-            particles: {
-                number: {
-                    value: 200, // Number of particles
-                    density: {
-                        enable: true,
-                        value_area: 800
-                    }
-                },
-                color: {
-                    value: "#ffffff" // White particles to represent stars
-                },
-                shape: {
-                    type: "circle", // Circular particles
-                    stroke: {
-                        width: 0,
-                        color: "#000000"
-                    },
-                },
-                opacity: {
-                    value: 0.7, // Base opacity for brightness
-                    random: true, // Random opacity for blinking effect
-                    anim: {
-                        enable: false,
-                    }
-                },
-                size: {
-                    value: 3, // Size of particles
-                    random: true,
-                    anim: {
-                        enable: false,
-                    }
-                },
-                line_linked: {
-                    enable: false, // Disable connecting lines
-                },
-                move: {
-                    enable: true,
-                    speed: 5, // Slower speed for a more realistic flying effect
-                    direction: "none", // Particle movement direction
-                    random: true, // Random movement for a more dynamic effect
-                    straight: false,
-                    out_mode: "out",
-                    bounce: false,
-                    attract: {
-                        enable: false,
-                    }
-                }
-            },
-            interactivity: {
-                detect_on: "canvas",
-                events: {
-                    onhover: {
-                        enable: false, // Disable hover effect
-                    },
-                    onclick: {
-                        enable: false, // Disable click effect
-                    },
-                    resize: true
-                }
-            },
-            retina_detect: true
-        });
-    </script>
- 
+   
      <script>
         let deferredPrompt;
         window.addEventListener('beforeinstallprompt', (e) => {
@@ -3037,6 +2972,6 @@
         });
         
         </script>
-        <script src="/general/js/filtergames.js"></script>
-        <script src="/general/js/search.js"></script>
-        <script src="/general/js/settings.js"></script>
+        <script src="/assets/js/filtergames.js"></script>
+        <script src="/assets/js/search.js"></script>
+        <script src="/assets/js/settings.js"></script>
