--- a/assets/html/index.html
+++ b/assets/html/index.html
@@ -45,7 +45,7 @@
 </script>
     </head>
     <body>
-<script src="/assets/js/particlecode.js"></script>
+      <script src="https://cdn.jsdelivr.net/particles.js/2.0.0/particles.min.js"></script>
 <script src="/assets/js/particles.js"></script>
 <script src="/assets/js/global.js"></script>
 <script src="/assets/js/eruda.js"></script>
