--- a/assets/html/index.html
+++ b/assets/html/index.html
@@ -45,7 +45,7 @@
 </script>
     </head>
     <body>
-      <script src="https://cdn.jsdelivr.net/particles.js/2.0.0/particles.min.js"></script>
+<script src="/assets/js/particlecode.js"></script>
 <script src="/assets/js/particles.js"></script>
 <script src="/assets/js/global.js"></script>
 <script src="/assets/js/eruda.js"></script>
@@ -80,8 +80,8 @@
           </center>
           <br>
           <center> 
-           <a href="/general/pages/dashboard.html"><button class="button">Dashboard</button></a>&nbsp;&nbsp;&nbsp;
-           <a href="/general/pages/premium.html"><button class="button">Premium</button></a>&nbsp;&nbsp;&nbsp;
+           <a href="/assets/html/dashboard.html"><button class="button">Dashboard</button></a>&nbsp;&nbsp;&nbsp;
+           <a href="/assets/html/premium.html"><button class="button">Premium</button></a>&nbsp;&nbsp;&nbsp;
            <a href="https://discord.gg/WSUy3dHFRh"><button class="button">Join Our Discord</button></a>&nbsp;&nbsp;&nbsp;
            <a id="openScriptButton"><button class="button">Cloak</button></a>&nbsp;
           </center>
