--- a/assets/html/dashboard.html
+++ b/assets/html/dashboard.html
@@ -68,21 +68,21 @@
         <center><h1 class="text">Dashboard</h1></center>
 
         <center> 
-            <a href="/general/pages/arcade.html"><button class="button">Arcade</button></a>&nbsp;&nbsp;&nbsp;
-            <a href="/general/pages/utilities.html"><button class="button">Utilities</button></a>&nbsp;&nbsp;&nbsp;
-            <a href="/general/pages/media.html"><button class="button">Media</button></a>&nbsp;&nbsp;&nbsp;
-            <a href="/general/pages/ai.html"><button class="button">AI</button></a>&nbsp;&nbsp;&nbsp;
+            <a href="/assets/html/arcade.html"><button class="button">Arcade</button></a>&nbsp;&nbsp;&nbsp;
+            <a href="/assets/html/utilities.html"><button class="button">Utilities</button></a>&nbsp;&nbsp;&nbsp;
+            <a href="/assets/html/media.html"><button class="button">Media</button></a>&nbsp;&nbsp;&nbsp;
+            <a href="/assets/html/ai.html"><button class="button">AI</button></a>&nbsp;&nbsp;&nbsp;
            </center>
            <br>
            <center> 
-            <a href="/general/pages/partnership.html"><button class="button">Partnerships</button></a>&nbsp;&nbsp;&nbsp;
-            <a href="/general/pages/credits.html"><button class="button">Credits</button></a>&nbsp;&nbsp;&nbsp;
-            <a href="/general/pages/terms.html"><button class="button">Terms</button></a>&nbsp;&nbsp;&nbsp;
-            <a href="/general/pages/policy.html"><button class="button">Policy</button></a>&nbsp;&nbsp;&nbsp;
+            <a href="/assets/html/partnership.html"><button class="button">Partnerships</button></a>&nbsp;&nbsp;&nbsp;
+            <a href="/assets/html/credits.html"><button class="button">Credits</button></a>&nbsp;&nbsp;&nbsp;
+            <a href="/assets/html/terms.html"><button class="button">Terms</button></a>&nbsp;&nbsp;&nbsp;
+            <a href="/assets/html/policy.html"><button class="button">Policy</button></a>&nbsp;&nbsp;&nbsp;
            </center>
            <br>
            <center> 
-            <a href="/general/pages/search.html"><button class="button">Search</button></a>&nbsp;&nbsp;&nbsp;
+            <a href="/assets/html/search.html"><button class="button">Search</button></a>&nbsp;&nbsp;&nbsp;
             <a href=" " target="_blank"><button class="button">Infamy Studios</button></a>&nbsp;&nbsp;&nbsp;
             <a href="https://infamyy.vercel.app/" target="_blank"><button class="button">About me</button></a>&nbsp;&nbsp;&nbsp;
            </center>
@@ -90,9 +90,9 @@
        <br>
        <br>
        <center> 
-        <a href="/general/pages/faq.html"><button class="button">FAQ</button></a>&nbsp;&nbsp;&nbsp;
-        <a href="/general/pages/suggestions.html"><button class="button">Suggestions</button></a>&nbsp;&nbsp;&nbsp;
-        <a href="/general/pages/reportbugs.html"><button class="button">Report Bugs</button></a>&nbsp;&nbsp;&nbsp;
+        <a href="/assets/html/faq.html"><button class="button">FAQ</button></a>&nbsp;&nbsp;&nbsp;
+        <a href="/assets/html/suggestions.html"><button class="button">Suggestions</button></a>&nbsp;&nbsp;&nbsp;
+        <a href="/assets/html/reportbugs.html"><button class="button">Report Bugs</button></a>&nbsp;&nbsp;&nbsp;
        </center>
      <br>
      <br>
