--- a/assets/html/media.html
+++ b/assets/html/media.html
@@ -210,7 +210,7 @@ button:hover{
         });
         
         </script>
-        <script src="/general/js/filtergames.js"></script>
-        <script src="/general/js/search.js"></script>
-        <script src="/general/js/settings.js"></script>
-        <script src="/general/js/movies.js"></script>
+        <script src="/assets/js/filtergames.js"></script>
+        <script src="/assets/js/search.js"></script>
+        <script src="/assets/js/settings.js"></script>
+        <script src="/assets/js/movies.js"></script>
