--- a/404.html
+++ b/404.html
@@ -114,7 +114,7 @@
                 move: {
                     enable: true,
                     speed: 5, // Slower speed for a more realistic flying effect
-                    direction: "none", // Particle movement direction
+                    direction: "top", // Particle movement direction
                     random: true, // Random movement for a more dynamic effect
                     straight: false,
                     out_mode: "out",
