--- a/assets/misc/movies/movies.html
+++ b/assets/misc/movies/movies.html
@@ -231,3 +231,4 @@
      <script src="/assets/js/ai.js"></script>
      <script src="/assets/js/settings.js"></script>
      <script src="/assets/js/game.js"></script>
+     <script src="/assets/js/moviesembed.js"></script>
