--- a/403.html
+++ b/403.html
@@ -71,13 +71,13 @@
     </body>
 </html>
 <script src="/general/js/cloak.js"></script>
-    <!-- Include Particle.js library -->
-    <script src="https://cdn.jsdelivr.net/particles.js/2.0.0/particles.min.js"></script>
+
+    <script src="/assets/js/particlecode.js"></script>
     <script>
         particlesJS("particles-js", {
             particles: {
                 number: {
-                    value: 200, // Number of particles
+                    value: 100, // Number of particles
                     density: {
                         enable: true,
                         value_area: 800
@@ -112,8 +112,8 @@
                 },
                 move: {
                     enable: true,
-                    speed: 5, // Slower speed for a more realistic flying effect
-                    direction: "none", // Particle movement direction
+                    speed: 3, // Slower speed for a more realistic flying effect
+                    direction: "top", // Particle movement direction
                     random: true, // Random movement for a more dynamic effect
                     straight: false,
                     out_mode: "out",
