--- a/404.html
+++ b/404.html
@@ -72,73 +72,72 @@
     </body>
 </html>
 <script src="/general/js/cloak.js"></script>
-    <!-- Include Particle.js library -->
-    <script src="https://cdn.jsdelivr.net/particles.js/2.0.0/particles.min.js"></script>
-    <script>
-        particlesJS("particles-js", {
-            particles: {
-                number: {
-                    value: 100, // Number of particles
-                    density: {
-                        enable: true,
-                        value_area: 800
-                    }
-                },
-                color: {
-                    value: "#ffffff" // White particles to represent stars
-                },
-                shape: {
-                    type: "circle", // Circular particles
-                    stroke: {
-                        width: 0,
-                        color: "#000000"
-                    },
-                },
-                opacity: {
-                    value: 0.7, // Base opacity for brightness
-                    random: true, // Random opacity for blinking effect
-                    anim: {
-                        enable: false,
-                    }
-                },
-                size: {
-                    value: 3, // Size of particles
-                    random: true,
-                    anim: {
-                        enable: false,
-                    }
-                },
-                line_linked: {
-                    enable: false, // Disable connecting lines
-                },
-                move: {
+<script src="/assets/js/particlecode.js"></script>
+<script>
+    particlesJS("particles-js", {
+        particles: {
+            number: {
+                value: 100, // Number of particles
+                density: {
                     enable: true,
-                    speed: 3, // Slower speed for a more realistic flying effect
-                    direction: "top", // Particle movement direction
-                    random: true, // Random movement for a more dynamic effect
-                    straight: false,
-                    out_mode: "out",
-                    bounce: false,
-                    attract: {
-                        enable: false,
-                    }
+                    value_area: 800
                 }
             },
-            interactivity: {
-                detect_on: "canvas",
-                events: {
-                    onhover: {
-                        enable: false, // Disable hover effect
-                    },
-                    onclick: {
-                        enable: false, // Disable click effect
-                    },
-                    resize: true
+            color: {
+                value: "#ffffff" // White particles to represent stars
+            },
+            shape: {
+                type: "circle", // Circular particles
+                stroke: {
+                    width: 0,
+                    color: "#000000"
+                },
+            },
+            opacity: {
+                value: 0.7, // Base opacity for brightness
+                random: true, // Random opacity for blinking effect
+                anim: {
+                    enable: false,
                 }
             },
-            retina_detect: true
-        });
-    </script>
+            size: {
+                value: 3, // Size of particles
+                random: true,
+                anim: {
+                    enable: false,
+                }
+            },
+            line_linked: {
+                enable: false, // Disable connecting lines
+            },
+            move: {
+                enable: true,
+                speed: 3, // Slower speed for a more realistic flying effect
+                direction: "top", // Particle movement direction
+                random: true, // Random movement for a more dynamic effect
+                straight: false,
+                out_mode: "out",
+                bounce: false,
+                attract: {
+                    enable: false,
+                }
+            }
+        },
+        interactivity: {
+            detect_on: "canvas",
+            events: {
+                onhover: {
+                    enable: false, // Disable hover effect
+                },
+                onclick: {
+                    enable: false, // Disable click effect
+                },
+                resize: true
+            }
+        },
+        retina_detect: true
+    });
+</script>
  
      <script>
         let deferredPrompt;
