--- a/assets/html/policy.html
+++ b/assets/html/policy.html
@@ -45,8 +45,7 @@
 </script>
     </head>
     <body>
-        <script src="/assets/js/particlecode.js"></script>
-        <script src="/assets/js/particles.js"></script>
+
         <script src="/assets/js/global.js"></script>
         <script src="/assets/js/eruda.js"></script>
         <script>eruda.init();</script>
@@ -100,7 +99,7 @@
             <div>
             <h2>Last updated on Monday, October 1, Tuesday</h2>
             </div>
-    </body><script src="/general/js/cloak.js"></script>
+    </body><script src="/assets/js/cloak.js"></script>
 </html>
 
      <script>
@@ -112,4 +111,6 @@
         });
         
         </script>
-        <script src="/general/js/settings.js"></script>
+        <script src="/assets/js/settings.js"></script>
+        <script src="/assets/js/particlecode.js"></script>
+        <script src="/assets/js/particles.js"></script>
