--- a/assets/html/settings.html
+++ b/assets/html/settings.html
@@ -45,8 +45,7 @@
 </script>
     </head>
     <body>
-        <script src="/assets/js/particlecode.js"></script>
-        <script src="/assets/js/particles.js"></script>
+
         <script src="/assets/js/global.js"></script>
         <script src="/assets/js/eruda.js"></script>
         <script>eruda.init();</script>
@@ -91,7 +90,7 @@
         </div>
         
     </body>
-    <script src="/general/js/cloak.js"></script>
+    <script src="/assets/js/cloak.js"></script>
 </html>
      <script>
         let deferredPrompt;
@@ -102,5 +101,7 @@
         });
         
         </script>
-        <script src="/general/js/settings.js"></script>
-        <script src="/general/js/cloak.js"></script>
+        <script src="/assets/js/settings.js"></script>
+        <script src="/assets/js/cloak.js"></script>
+        <script src="/assets/js/particlecode.js"></script>
+        <script src="/assets/js/particles.js"></script>
