--- a/assets/html/utilities.html
+++ b/assets/html/utilities.html
@@ -45,8 +45,6 @@
 </script>
     </head>
     <body>
-        <script src="/assets/js/particlecode.js"></script>
-        <script src="/assets/js/particles.js"></script>
         <script src="/assets/js/global.js"></script>
         <script src="/assets/js/eruda.js"></script>
         <script>eruda.init();</script>
@@ -269,6 +267,8 @@
         });
         
         </script>
-        <script src="/general/js/filtergames.js"></script>
-        <script src="/general/js/search.js"></script>
-        <script src="/general/js/settings.js"></script>
+        <script src="/assets/js/filtergames.js"></script>
+        <script src="/assets/js/search.js"></script>
+        <script src="/assets/js/settings.js"></script>
+        <script src="/assets/js/particlecode.js"></script>
+        <script src="/assets/js/particles.js"></script>
