--- a/assets/html/faq.html
+++ b/assets/html/faq.html
@@ -67,13 +67,13 @@
         <center><div class="text">FAQ</div></center>
         <br>
        <div id="legal">
-        <h2>This website is blocked, how can i access it?</h2><br>
+        <h2>This website is blocked, how can i access it?</h2>
         <h3>You can join our discord server for more links</h3>
         <hr>
-        <h2>Where can i find the source of these games?</h2><br>
+        <h2>Where can i find the source of these games?</h2>
         <h3>Unfortunately this website is closed source so you cant access it directly but these games are from 3kh0 so check them out on gitlab.</h3>
         <hr>
-        <h2>Is this website safe?</h2><br>
+        <h2>Is this website safe?</h2>
         <h3>Other than the movie section, this website is very safe and secure. The movie section uses vidlink which has some suspious looking ads so if opened close it immediately.</h3>
        </div>
     </body>
@@ -90,3 +90,5 @@
         
         </script>
                 <script src="/general/js/settings.js"></script>
+                <script src="/assets/js/particlecode.js"></script>
+                <script src="/assets/js/particles.js"></script>
