--- a/assets/html/suggestions.html
+++ b/assets/html/suggestions.html
@@ -45,8 +45,7 @@
 </script>
     </head>
     <body>
-        <script src="/assets/js/particlecode.js"></script>
-        <script src="/assets/js/particles.js"></script>
+
         <script src="/assets/js/global.js"></script>
         <script src="/assets/js/eruda.js"></script>
         <script>eruda.init();</script>
@@ -92,5 +91,7 @@
         });
         
         </script>
-        <script src="/general/js/ai.js"></script>
-        <script src="/general/js/settings.js"></script>
+        <script src="/assets/js/ai.js"></script>
+        <script src="/assets/js/settings.js"></script>
+        <script src="/assets/js/particlecode.js"></script>
+        <script src="/assets/js/particles.js"></script>
