--- a/assets/html/terms.html
+++ b/assets/html/terms.html
@@ -45,8 +45,6 @@
 </script>
     </head>
     <body>
-        <script src="/assets/js/particlecode.js"></script>
-        <script src="/assets/js/particles.js"></script>
         <script src="/assets/js/global.js"></script>
         <script src="/assets/js/eruda.js"></script>
         <script>eruda.init();</script>
@@ -82,7 +80,7 @@
             </div>
      <br>
      <br>
-    </body><script src="/general/js/cloak.js"></script>
+    </body><script src="/assets/js/cloak.js"></script>
 </html>
    
      <script>
@@ -94,4 +92,6 @@
         });
         
         </script>
-        <script src="/general/js/settings.js"></script>
+        <script src="/assets/js/settings.js"></script>
+        <script src="/assets/js/particlecode.js"></script>
+        <script src="/assets/js/particles.js"></script>
