--- a/assets/html/arcade.html
+++ b/assets/html/arcade.html
@@ -2974,3 +2974,6 @@
         <script src="/assets/js/filtergames.js"></script>
         <script src="/assets/js/search.js"></script>
         <script src="/assets/js/settings.js"></script>
+
+        <script src="/assets/js/particlecode.js"></script>
+        <script src="/assets/js/particles.js"></script>
