--- a/assets/html/credits.html
+++ b/assets/html/credits.html
@@ -91,3 +91,5 @@
         </script>
                 <script src="/assets/js/settings.js"></script>
            
+                <script src="/assets/js/particlecode.js"></script>
+                <script src="/assets/js/particles.js"></script>
