--- a/assets/html/ai.html
+++ b/assets/html/ai.html
@@ -85,4 +85,5 @@
         
         </script>
         <script src="/assets/js/ai.js"></script>
-      
+        <script src="/assets/js/particlecode.js"></script>
+        <script src="/assets/js/particles.js"></script>
