--- a/assets/html/faq.html
+++ b/assets/html/faq.html
@@ -67,6 +67,12 @@
         <center><div class="text">FAQ</div></center>
         <br>
        <div id="legal">
+        <h2>What is this website?</h2>
+        <h3>This website is called Starlight and its a all-in-one platform for your games, hacks, apps and so much more</h3>
+        <hr>
+        <h2>What are unblocked games and proxies</h2>
+        <h3>In simple terms, these are websites that are meant to be unblocked so you can use them at school.</h3>
+        <hr>
         <h2>This website is blocked, how can i access it?</h2>
         <h3>You can join our discord server for more links</h3>
         <hr>
@@ -74,7 +80,7 @@
         <h3>Unfortunately this website is closed source so you cant access it directly but these games are from 3kh0 so check them out on gitlab.</h3>
         <hr>
         <h2>Is this website safe?</h2>
-        <h3>Other than the movie section, this website is very safe and secure. The movie section uses vidlink which has some suspious looking ads so if opened close it immediately.</h3>
+        <h3>Other than the movie section, this website is very safe and secure. The movie section uses vidbinge which has ads so if opened close it immediately.</h3>
        </div>
     </body>
     <script src="/general/js/cloak.js"></script>
