--- a/assets/misc/movies/movies.html
+++ b/assets/misc/movies/movies.html
@@ -203,7 +203,7 @@
         <span id="link-text"></span>
         <button class="copy-button" id="copy-button">Copy</button>
     </div>
-    <a href="/library/local-games/1/index.html" target="_blank"><img src="/assets/images/other/opendirect.png" height="30" width="30" class="icon"></a>
+    <a id="opendirect" target="_blank"><img src="/assets/images/other/opendirect.png" height="30" width="30" class="icon"></a>
 </div>
 </div>
 
@@ -212,7 +212,21 @@
     <div class="script-container">
        
     </div>
-  
+
+    <div class="desc">
+        <h2 class="desc-title">Title</h2>
+        <p>Unknown</p>
+          <h2 class="desc-desc">Description</h2>
+        <p>Unknown</p>
+          <h2 class="desc-creator">Creator</h2>
+          <p>Unknown<p>
+          <h2>Keybinds</h2>
+          <p>W,A,S,D, Custom Keys, Arrow keys</p>
+          <h2>Devices</h2>
+          <p>Desktop, Mobile</p>
+          <h2>Latest Update</h2>
+          <p>Oct 12th, 2024</p>
+      </div>
     
 </div>
 </div>
