--- a/assets/html/policy.html
+++ b/assets/html/policy.html
@@ -67,34 +67,28 @@
         <div id="legal">
             <center><h1 class="text">Policy</h1></center>
             <div>
-            <h2>
-            
-            1. Personal information<br>
-            we use Google Analytics to help us understand how our users use<br> the Site--you can read more about how Google uses your Personal Information here: https://www.google.com/intl/en/policies/privacy/
-            </h2>
-            <br>
-            <h2>
-            2. Data sharing<br>
-            We do not sell, rent, or lease your personal information to third parties
-            </h2>
-            <br>
-            <h2>
-            3. Security<br>
-            We implement the best security measures to ensure your safety on Starlight.<br>
-            Despite our best efforts to ensure safety for our users, no services guarantee complete security.<br>So please use Starlight at your own risk
-            </h2>
-            <br>
-            <h2>
-            4.Third-party links<br>
-            We use thirty party links for our games and apps so before using any games make sure to review<br>
-            their privacy policies before sharing any information.
-            </h2>
-            <br>
-            <h2>
-            5.Changes to Privacy Policy<br>
-            Entertopia reserves the right to update this Privacy Policy at any time. Any changes will be posted on this page, and we encourage you to review the policy periodically.
-            </h2>
-            <br>
+           <h3>1. Information We Collect<br>
+            We may collect the following types of information when you use our services:
+            IP Address: Starlight uses Google Tag Manager, which may collect your IP address as part of its functionality. This information helps us understand website traffic and improve our services.
+            Usage Data: Information about how you use our website, including your browser type, operating system, pages visited, and time spent on each page.
+            Please note that Starlight does not collect any personal information directly. Any personal information may only be collected through third-party services.
+         <br>   2. Use of Information<br>
+            We may use the information we collect for the following purposes:
+            To provide, maintain, and improve our services.
+            To monitor and analyze usage and trends to enhance user experience.
+            To communicate with you regarding updates, promotions, and other news related to Starlight (if you have opted in).
+           <br> 3. Cookies<br>
+            Starlight uses cookies and similar technologies to enhance your experience on our site. Cookies are small data files stored on your device that help us recognize you and remember your preferences. You can control cookie settings through your browser.
+       <br>     4. Third-Party Services<br>
+            Our website may contain links to third-party websites and advertisements. We do not control these third-party services and are not responsible for their content or privacy policies. We encourage you to review their privacy practices before providing any personal information.
+       <br>     5. Data Security<br>
+            We take reasonable measures to protect your information from unauthorized access, alteration, disclosure, or destruction. However, no method of transmission over the internet or electronic storage is 100% secure, and we cannot guarantee absolute security.
+         <br>   6. Children's Privacy<br>
+            Starlight is intended for users 13 years of age or older. We do collect certain information through Google Tag Manager and third-party services. If you are a parent or guardian and believe that your child under the age of 13 has provided us with personal information, please contact us. Additionally, any inquiries regarding the information collected through Google Tag Manager or third-party services should be directed to those entities.
+        <br>    7. Changes to This Privacy Policy<br>
+            Starlight reserves the right to modify this Privacy Policy at any time. It is your responsibility to review this policy periodically. Changes will be effective immediately upon posting on our site. Your continued use of the site after changes indicates your acceptance of the new policy.
+          <br>  8. Contact Information<br>
+            If you have any questions or concerns about this Privacy Policy, please contact us through our website.</h3>
             </div>
             <div>
             <h2>Last updated on Monday, October 1, Tuesday</h2>
