--- a/assets/html/terms.html
+++ b/assets/html/terms.html
@@ -65,17 +65,26 @@
         <br>
         <div id="legal">
             <center><h1 class="text">Terms</h1></center>
-                <h2>
-                    1.We emphasize that your actions and the content you share on our platform are entirely your responsibility. It is important to remember that any information, comments, or media you contribute may be visible to others and can have implications for your privacy and security.<br>
-                    2.This Site is offered and made available only to users who are thirteen (13) years of age or older. We take the safety and well-being of younger users very seriously. If you are not yet 13 years old, or if you do not meet the required greater age for certain features, we kindly ask you to discontinue using the Site immediately. We aim to provide a safe environment for all users, and adhering to this age requirement is a crucial part of that commitment.<br><br>
-                    3.If for any reason you do not agree with all of the terms and conditions contained in this Agreement, please discontinue using the Site immediately. It’s essential to understand that by using or attempting to use the Site, you certify that you are at least 13 years of age (or meet the required greater age for certain features, where applicable). By continuing to engage with our services, you acknowledge and confirm that you meet these eligibility requirements.<br><br>
-                    4.Furthermore, by using our website, you agree to our terms of use and consent to our privacy policy. These documents are designed to protect both you and Starlight, outlining your rights and responsibilities as a user while ensuring your data is handled with care. We encourage you to read these documents thoroughly so you fully understand your rights and obligations within our community.<br><br>
-            </h2>
-            </h2>
+            <center><h1 id="splash">By accessing or using our services, you agree to comply with and be bound by the following terms and conditions. Please read them carefully.</h1></center>
+            <h3>
+                1. General Information<br>
+                Starlight provides a variety of services, including a free web proxy, games, utility applications, hacks, and a movie section featuring third-party advertisements. By using our site, you acknowledge that you understand the nature of these services and agree to use them responsibly.<br>
+                2. Age Requirement<br>
+                Users must be 13 years of age or older to access and use Starlight. Our platform includes games and a chatting system that may contain content inappropriate for individuals under the age of 13. By using our site, you confirm that you meet this age requirement.<br>
+                3. User-Generated Ads<br>
+                Our site utilizes Google Tag Manager and displays user-generated ads. While we strive to ensure that all advertisements are appropriate, we cannot guarantee the content of these ads. Users are encouraged to exercise caution and discretion when interacting with any advertisements or external links.<br>
+                4. Movies Section Warning<br>
+                The movie section of Starlight contains advertisements from third parties. We advise users to be cautious while browsing this section, as we do not control the content or safety of these ads. Starlight is not responsible for any issues that may arise from interacting with third-party advertisements.<br>
+                5. User Responsibility<br>
+                By using Starlight, you agree to take full responsibility for your actions while using our services. You will not hold Starlight liable for any direct or indirect damages resulting from your use of the website or its content.<br>
+                6. Changes to Terms<br>
+                Starlight reserves the right to modify these terms and conditions at any time. It is your responsibility to review these terms periodically. Any changes will be effective immediately upon posting on our site. Continued use of the site after changes indicates your acceptance of the new terms.<br>
+                7. Contact Information<br>
+                For any questions or concerns about these terms and conditions, please contact us through our website.<br></h3>
             <br>
             <br>
             <div>
-            <h2>Last updated on Monday, july 29, 2024</h2>
+            <h2>Last updated on Monday, july 29, 2024</h3>
             </div>
             </div>
      <br>
