--- a/assets/html/search.html
+++ b/assets/html/search.html
@@ -100,14 +100,13 @@
      </a>
        </div>
     </body>
-
-    <script src="/general/js/cloak.js"></script>
-<script src="/static/uv/uv.bundle.js" defer></script>
-<script src="/static/uv/uv.config.js" defer></script>
-<script src="/static/register-sw.js" defer></script>
-<script src="/static/search.js" defer></script>
-<script src="/static/index.js" defer></script>
-<script src="/static/error.js" defer></script>
+<script src="/assets/js/cloak.js"></script>
+<script src="/assets/uv/uv/uv.bundle.js" defer></script>
+<script src="/assets/uv/uv/uv.config.js" defer></script>
+<script src="/assets/uv/register-sw.js" defer></script>
+<script src="/assets/uv/search.js" defer></script>
+<script src="/assets/uv/index.js" defer></script>
+<script src="/assers/uv/error.js" defer></script>
 </html>
   
  
