--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Redirecting...</title>
-    <link rel="icon" href="/img/starlight.png">
+    <link rel="icon" href="/assets/images/offical/starlight.png">
     <style>
         body {
             display: flex;
