--- a/assets/html/media.html
+++ b/assets/html/media.html
@@ -155,8 +155,8 @@ button:hover{
         <br>
         <br>
         <center><div class="text">Starlight's Media/Movies</div></center>
-        <div id="search-bar">
-            <input type="text" id="search" placeholder="Search for a movie or TV show...">
+        <div id="search">
+            <input type="text" id="search-input" placeholder="Search for a movie or TV show...">
             <button id="searchButton">Search</button>
         </div>
         <div id="results"></div>
