--- a/assets/html/ai.html
+++ b/assets/html/ai.html
@@ -65,7 +65,9 @@
         <br>
         <center><div class="text">StarlightAI</div></center>
         <div class="chat-container">
-            <div id="chat-box"></div>
+            <div id="chat-box">
+                How can I assist you today?
+            </div>
             <input type="text" id="user-input" placeholder="Enter your prompt here...">
             <div class="roww">
             <button id="send-button">Send</button>
