--- a/assets/html/reportbugs.html
+++ b/assets/html/reportbugs.html
@@ -69,6 +69,7 @@
           <div class="mb-3">
             <input type="text" class="form-control" id="emailInput" placeholder="Enter the Apps name">
           </div>
+          <br>
           <div class="mb-3">
             <input type="text" class="form-control" id="messageInput"  placeholder="Enter the URL">
           </div>
@@ -77,7 +78,7 @@
         </form>
     </body>
 </html><script src="/general/js/cloak.js"></script>
-    
+    <script src="/assets/js/suggestions.js"></script>
      <script>
         let deferredPrompt;
         window.addEventListener('beforeinstallprompt', (e) => {
