--- a/assets/html/index.html
+++ b/assets/html/index.html
@@ -120,15 +120,13 @@
     'ADS OPEN FOR SALE PLEASE BUY',
     'youtube is unblocked for me',
     'you found secret 1',
-    'im in the thick of it',
-    'everybody knows',
-    'they know me where it snows',
-    'i skied in and they froze',
-    'I dont know no nothing bout no ice im just cold',
-    'Forty something milli subs or so, Ive been told',
-    'from the screen to the ring to the pen to the king',
-    'wheres my crown thats my bling',
-    'always drama when i ring'
+    'key to making sites look good, add lots of animations',
+    '1 and a half month of development looks like this',
+    'twikipedia is my idol',
+    '7 months of coding experience leads to this',
+    'i secretly think that 55gms solos every proxy site',
+    'whenever i scrape games from other gaming sites i feel like 3kh0',
+    ' ',
 ];
 
 // Function to change text
