--- a/assets/html/premium.html
+++ b/assets/html/premium.html
@@ -75,9 +75,9 @@
                     <p>Get exclusive leaks and beta links for our website that shows the latest features</p>
                 </div>
                 <div class="partner" style="animation-delay: 0.2s;">
-                    <img src="/assets/images/thumbnails/chat.jpg">
-                    <h2>Chat system</h2>
-                    <p>You get to use the exclusive chat system where you can talk to anyone globally.</p>
+                    <img src="/assets/images/thumbnails/contribute.jpeg">
+                    <h2>Contributers</h2>
+                    <p>You get to be on the contributers page</p>
                 </div>
                 <div class="partner" style="animation-delay: 0.3s;">
                     <img src="/assets/images/thumbnails/premiumlinks.png">
