--- a/assets/html/premium.html
+++ b/assets/html/premium.html
@@ -70,17 +70,17 @@
         <main class="main">
             <section class="partners">
                 <div class="partner" style="animation-delay: 0.1s;">
-                    <img src="/assets/images/thumbnails/leak.png">
+                    <img src="/assets/images/thumbnails/leak.png" height="210px" width="190px">
                     <h2>Exclusive leaks</h2>
                     <p>Get exclusive leaks and beta links for our website that shows the latest features</p>
                 </div>
-                <div class="partner" style="animation-delay: 0.2s;">
+                <div class="partner" style="animation-delay: 0.2s;" height="210px" width="190px">
                     <img src="/assets/images/thumbnails/contribute.jpeg">
                     <h2>Contributers</h2>
                     <p>You get to be on the contributers page</p>
                 </div>
                 <div class="partner" style="animation-delay: 0.3s;">
-                    <img src="/assets/images/thumbnails/premiumlinks.png">
+                    <img src="/assets/images/thumbnails/premiumlinks.png" height="210px" width="190px">
                     <h2>Private links</h2>
                     <p>You get your own private links which is not shared with anyone else.</p>
                 </div>
