--- a/assets/html/media.html
+++ b/assets/html/media.html
@@ -155,10 +155,12 @@ button:hover{
         <br>
         <br>
         <center><div class="text">Starlight's Media/Movies</div></center>
+        <center>
         <div id="search-bar">
             <input type="text" id="search" placeholder="Search for a movie or TV show...">
             <button id="searchButton">Search</button>
         </div>
+        </center>
         <div id="results"></div>
 
         <!-- Popup for season and episode input -->
