--- a/assets/html/premium.html
+++ b/assets/html/premium.html
@@ -74,8 +74,8 @@
                     <h2>Exclusive leaks</h2>
                     <p>Get exclusive leaks and beta links for our website that shows the latest features</p>
                 </div>
-                <div class="partner" style="animation-delay: 0.2s;" height="210px" width="190px">
-                    <img src="/assets/images/thumbnails/contribute.jpeg">
+                <div class="partner" style="animation-delay: 0.2s;">
+                    <img src="/assets/images/thumbnails/contribute.jpeg" height="210px" width="190px">
                     <h2>Contributers</h2>
                     <p>You get to be on the contributers page</p>
                 </div>
