--- a/assets/html/index.html
+++ b/assets/html/index.html
@@ -61,6 +61,7 @@
                 <a href="/assets/html/settings.html"><img src="/assets/images/navicons/settings.png" height="12px" width="12px">&nbsp;Settings</a>
             </div>
         </nav>
+        <div id="mainmenu">
         <br>
         <br>
         <center><div class="text">Welcome to Starlight</div></center>
@@ -93,6 +94,7 @@
             <p><b style="color: rgb(124, 124, 124);">Ads open for sale</b></p>
           </div></a>
           </center>
+          </div>
 <script src="/assets/js/cloak.js"></script>
 <script src="/assets/uv/uv/uv.bundle.js" defer></script>
 <script src="/assets/uv/uv/uv.config.js" defer></script>
