--- a/assets/html/ai.html
+++ b/assets/html/ai.html
@@ -61,8 +61,7 @@
                 <a href="/assets/html/settings.html"><img src="/assets/images/navicons/settings.png" height="12px" width="12px">&nbsp;Settings</a>
             </div>
         </nav>
-        <br>
-        <br>
+<div id="mainmenu">
         <center><div class="text">StarlightAI</div></center>
         <div class="chat-container">
             <div id="chat-box">
@@ -73,6 +72,7 @@
             <button id="send-button">Send</button>
             <button id="send-button" onclick="window.location.reload();">Clear</button>
             </div>
+        </div>
         </div>
     </body>
     
