--- a/assets/html/index.html
+++ b/assets/html/index.html
@@ -53,12 +53,12 @@
         <nav>
             <a href="/assets/html/index.html" class="left-link">Starlight</a>
             <div class="nav-links">
-                <a href="/assets/html/arcade.html"><img src="/assets/images/navicons/arcade.png" height="12px" width="12px">&nbsp;Arcade</a>
-                <a href="/assets/html/utilities.html"><img src="/assets/images/navicons/apps.png" height="12px" width="12px">&nbsp;Utilities</a>
-                <a href="/assets/html/media.html"><img src="/assets/images/navicons/movies.png" height="12px" width="12px">&nbsp;Media</a>
-                <a href="/assets/html/ai.html"><img src="/assets/images/navicons/ai.png" height="12px" width="12px">&nbsp;AI</a>
-                <a href="/assets/html/search.html"><img src="/assets/images/navicons/search.png" height="12px" width="12px">&nbsp;Search</a>
-                <a href="/assets/html/settings.html"><img src="/assets/images/navicons/settings.png" height="12px" width="12px">&nbsp;Settings</a>
+                <a href="/assets/html/arcade.html"><img src="/assets/images/navicons/arcade.png" id="nav-img">&nbsp;Arcade</a>
+                <a href="/assets/html/utilities.html"><img src="/assets/images/navicons/apps.png" id="nav-img">&nbsp;Utilities</a>
+                <a href="/assets/html/media.html"><img src="/assets/images/navicons/movies.png" id="nav-img">&nbsp;Media</a>
+                <a href="/assets/html/ai.html"><img src="/assets/images/navicons/ai.png" id="nav-img">&nbsp;AI</a>
+                <a href="/assets/html/search.html"><img src="/assets/images/navicons/search.png" id="nav-img">&nbsp;Search</a>
+                <a href="/assets/html/settings.html"><img src="/assets/images/navicons/settings.png" id="nav-img">&nbsp;Settings</a>
             </div>
         </nav>
         <div id="mainmenu">
