--- a/assets/html/search.html
+++ b/assets/html/search.html
@@ -62,9 +62,7 @@
                 <a href="/assets/html/settings.html"><img src="/assets/images/navicons/settings.png" height="12px" width="12px">&nbsp;Settings</a>
             </div>
         </nav>
-        <br>
-        <br>
-        <br>
+     <div id="mainmenu">
         <center><div class="text">Starlight's Search/Proxy</div></center>
         <br>
         <center>
@@ -98,6 +96,7 @@
         <img src="/assets/images/thumbnails/nowgg.png" alt="Tiktok">
         <p>Now.GG</p>
      </a>
+       </div>
        </div>
     </body>
 <script src="/assets/js/cloak.js"></script>
